fixes #62 - Don\'t build a command line with string concatenation